--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "react-quill": "^2.0.0"
   }
 }
